0027794: A danger in the 'NCollection_Vector' initializing constructor

Constructor of NCollection_Vector is now declared as explicit.