src/NCollection/NCollection_Vector.hxx
@@ -152,8 +152,8 @@ public:
 public: //! @name public methods
 
   //! Constructor
-  NCollection_Vector (const Standard_Integer theIncrement              = 256,
-                      const Handle(NCollection_BaseAllocator)& theAlloc = NULL) :
+  explicit NCollection_Vector (const Standard_Integer theIncrement              = 256,
+                               const Handle(NCollection_BaseAllocator)& theAlloc = NULL) :
     NCollection_BaseVector (theAlloc, initMemBlocks, sizeof(TheItemType), theIncrement)
   {}
 
